<resources>
    <string name="app_name">GiveAway</string>
    <string name="create_an_account">Hey, let\'s help you connect by first creating your account</string>
    <string name="name_acc_creation">Name</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="phone_layout">Phone (Whatsapp)</string>
    <string name="continue_button">Continue</string>
    <string name="by_creating_an_account_you_agree_to_our">By creating an account, you agree to our</string>
    <string name="terms_of_service_and_privacy_policy">Terms of Service and Privacy Policy</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="already_have_an_account_sign_up">Already have an account? Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="follow">Follow</string>
    <string name="need_hint">New post...</string>
    <string name="gift_hint">Describe your gift, add pictures, videos and tags so people can easily spot your gift</string>
    <string name="done">Done</string>
    <string name="profile">Profile</string>
    <string name="need">Need</string>
    <string name="gift">Gift</string>
    <string name="filter">Filter</string>
    <string name="verify">VERIFY</string>
    <string name="create_account">Sign Up</string>
    <string name="don_t_have_an_account">New User?</string>
    <string name="resetPassword_text">Enter email and click continue to reset your password</string>
    <string name="verify_email">Enter email and click Verify to verify your email</string>
    <string name="password_characters">Password can\'t be less than 6 characters</string>
    <string name="enter_correct_email">Enter a correct email</string>
    <string name="phone_num_error">Enter a correct phone number</string>
    <string name="correct_name">Enter a correct name</string>
    <string name="max_pictures_info">\"Max of 5 pictures can be added \"</string>
    <string name="cancel">Cancel</string>
    <string name="request">Request</string>
    <string name="empty_post_warning">Post is empty</string>
    <string name="permission_denied">We couldn\'t choose media due to lack of permission</string>
    <string name="new_post">New Post</string>
    <string name="max_videos_info">Max of 3 videos can be added</string>
    <string name="discard_post">Discard Post?</string>
    <string name="discard_post_msg">This post will not be saved</string>
    <string name="create_new_post_msg">Creating new post...</string>
    <string name="addLink_error">Add correct web url</string>
    <string name="error_occurred_during_load">Error occurred during load</string>
    <string name="retry">retry</string>
    <string name="write_a_comment">Add a comment…</string>
    <string name="reply">Reply</string>


    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>