<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/search"
        app:showAsAction="ifRoom"
        android:orderInCategory="2" />
    <item android:title="@string/app_name"
        app:showAsAction="ifRoom"
        android:orderInCategory="1"
        android:icon="@drawable/ic_baseline_icon_swap_horiz_24"
        android:id="@+id/giveaway"/>
    <item android:title="@string/profile"
        android:orderInCategory="3"
        android:id="@+id/profile"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_baseline_account_circle_24"
        />
</menu>