<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/giveaway"
        android:title="@string/app_name"
        android:icon="@drawable/ic_baseline_icon_swap_horiz_24"
        app:showAsAction="ifRoom"
        android:orderInCategory="1">
    </item>

    <item
        android:id="@+id/search"
        android:title="@string/search"
        android:icon="@drawable/ic_baseline_search_24"
        app:showAsAction="always"
        android:orderInCategory="2"/>
    <item
        android:id="@+id/settings"
        android:title="@string/settings"
        android:icon="@drawable/ic_baseline_settings_24"
        app:showAsAction="always"
        android:orderInCategory="3"/>

</menu>