<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context=".ui.fragments.NewPost">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackgroundBorderless"
        app:layout_constraintEnd_toStartOf="@+id/page_title"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_close_24" />


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/page_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_post"
        android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
        app:layout_constraintBottom_toBottomOf="@+id/cancel"
        app:layout_constraintEnd_toStartOf="@+id/done"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/cancel"
        app:layout_constraintTop_toTopOf="@+id/cancel" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:text="@string/done"
        android:textColor="@color/design_default_color_primary_dark"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/page_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/page_title"
        app:layout_constraintTop_toTopOf="@+id/page_title" />

    <HorizontalScrollView
        android:id="@+id/tags_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/page_title">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chip_group"
            style="@style/Widget.MaterialComponents.ChipGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:singleLine="true" />
    </HorizontalScrollView>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/need_input_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:boxBackgroundMode="none"

        app:boxStrokeColor="@color/transparent_input_box_color"
        app:layout_constraintBottom_toTopOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/tags_scroll_view">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/need_input_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="top"
            android:hint="@string/need_hint"
            android:inputType="textCapSentences|textAutoComplete|textMultiLine" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_image"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        app:layout_constraintBottom_toTopOf="@id/media_controls"
        app:layout_constraintTop_toBottomOf="@id/guideline"
        tools:layout_editor_absoluteX="8dp">

    </androidx.recyclerview.widget.RecyclerView>

    <include
        android:id="@+id/media_controls"
        layout="@layout/layout_tag_pic_video"
        app:layout_constraintBottom_toBottomOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.45" />


</androidx.constraintlayout.widget.ConstraintLayout>