<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/profiePic"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/CircularImage"
        tools:srcCompat="@tools:sample/avatars" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/profile_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
        android:textSize="14sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/time"
        app:layout_constraintEnd_toStartOf="@id/time"
        app:layout_constraintStart_toEndOf="@id/profiePic"
        tools:text="@string/app_name" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/teal_200"
        app:layout_constraintBaseline_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="2wks" />

    <HorizontalScrollView
        android:id="@+id/tags_scroll_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="4dp"
        android:scrollbars="none"
        app:layout_constraintEnd_toStartOf="@id/need"
        app:layout_constraintBottom_toBottomOf="@id/profiePic"
        app:layout_constraintStart_toStartOf="@id/profile_name"
        app:layout_constraintTop_toBottomOf="@id/profile_name">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chip_group"
            style="@style/Widget.MaterialComponents.ChipGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:singleLine="true" />
    </HorizontalScrollView>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/need"
        android:text="@string/need"
        android:textColor="@color/design_default_color_primary_variant"
        app:layout_constraintTop_toBottomOf="@id/time"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="4"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profiePic"
        tools:text="I need a plate of rice, beans, amala, gbegiri, puffpuff. I beg you in the name
of jesus Christ that you serve. God will continkue to bless you if you can do thiskfor me because i havent aten siknce morning
nm,dsdnskldnskldksndlksndksndlsdklsdslkdjskljdlskjdskljdskdjskl" />

    <com.sagrishin.collageview.CollageView
        android:id="@+id/collageView_image_need"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description"
        app:layout_constraintVertical_chainStyle="packed">

    </com.sagrishin.collageview.CollageView>

    <com.sagrishin.collageview.CollageView
        android:id="@+id/collageView_video_need"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/collageView_image_need">

    </com.sagrishin.collageview.CollageView>
    <com.google.android.material.imageview.ShapeableImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/separator"
        android:layout_margin="3dp"
        app:srcCompat="@drawable/line_separator"
        app:layout_constraintTop_toBottomOf="@id/collageView_video_need"/>


    <HorizontalScrollView
        android:id="@+id/gift_scroll_tags"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scrollbars="none"
        app:layout_constraintTop_toBottomOf="@id/separator"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/gift">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chip_group_gift"
            style="@style/Widget.MaterialComponents.ChipGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:singleLine="true" />
    </HorizontalScrollView>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/gift"
        android:text="@string/gift"
        android:textColor="@color/design_default_color_primary_variant"
        app:layout_constraintTop_toTopOf="@id/gift_scroll_tags"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/gift_scroll_tags"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/description_gift"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="4"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gift_scroll_tags"
        tools:text="I need a plate of rice, beans, amala, gbegiri, puffpuff. I beg you in the name
of jesus Christ that you serve. God will continkue to bless you if you can do thiskfor me because i havent aten siknce morning
nm,dsdnskldnskldksndlksndksndlsdklsdslkdjskljdlskjdskljdskdjskl" />

    <com.sagrishin.collageview.CollageView
        android:id="@+id/collageView_image_gift"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toTopOf="@+id/collageView_video_gift"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description_gift"
        app:layout_constraintVertical_chainStyle="packed">

    </com.sagrishin.collageview.CollageView>

    <com.sagrishin.collageview.CollageView
        android:id="@+id/collageView_video_gift"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/collageView_image_gift">

    </com.sagrishin.collageview.CollageView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/collageView_video_gift">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/new_picture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toStartOf="@+id/new_video"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_baseline_email_24" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/new_video"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@+id/new_tag"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/new_picture"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_baseline_phone_24"
            tools:layout_editor_absoluteY="0dp" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/new_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/new_video"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_baseline_add_box_24"
            tools:layout_editor_absoluteY="0dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>